--- a/login.css
+++ b/login.css
@@ -11,6 +11,7 @@ body{
     color: white;
     background-image: url('login.jpg');
     background-size: cover;
+    background-repeat: no-repeat;
 }
 main{
     height: 450px;
