--- a/login.css
+++ b/login.css
@@ -10,8 +10,7 @@ body{
     height: 500px;
     color: white;
     background-image: url('login.jpg');
-    background-size: contain;
-    background-repeat: no-repeat;
+    background-size: cover;
 }
 main{
     height: 450px;
@@ -87,5 +86,8 @@ a{
     color: #f3f3f3;
     font-size: 20px;
     font-weight: 700;
+}
+#Signup{
+    transform:translateY(500px);
 }
 
