--- a/login.css
+++ b/login.css
@@ -15,6 +15,7 @@ body{
 main{
     height: 450px;
     width: 350px;
+    margin-top:180px;
     border: 1px solid #cccccc;
     border-radius: 5px;
     backdrop-filter: blur(10px);
