--- a/login.css
+++ b/login.css
@@ -32,6 +32,7 @@ form{
     flex-direction: column;
     gap: 10px;
     text-align: center;
+    transition:0.5s;
 }
 header{
     margin-bottom: 20px;
